# AIMS

./: pyproject.toml
DEI/: data.csv  lab.ipynb
