[tool.poetry]
name = "aims"
version = "0.1.0"
description = ""
authors = ["theo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.20"
numpy = "2.0"
jupyter = "^1.1.1"
lab = "^8.2"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
